made changes to swagger and db.ts for day start end
